--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="Navdeep Singh"
@@ -11,6 +11,8 @@
     <meta property="og:title" content="Navdeep Singh Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://navdeepsuppal.github.io/" />
+<!--
+    <link rel="shortcut icon" type="image/x-icon" href="./src/assets/images/jerry.png" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/jerry.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/jerry.png">
@@ -24,7 +26,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/jerry.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/jerry.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/jerry.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/jerry.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/jerry.png">-->
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
